Added username for following.